# snowstar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SnowStar.g4  SnowStarLexer.g4  SnowStarParser.g4  SnowStarParserExperimental.g4  blablabla.txt  build.sh  factorial.sssc  factoriel.sssc  out.cwsc  out.iwsc  out.ssbc.old  test.sssc  update_grammar.sh
.antlr/: SnowStarLexer.java  SnowStarParser.interp  SnowStarParser.java
Common/: info.cpp  info.hpp  values.cpp  values.hpp
Common/Utils/: utils.cpp  utils.hpp
Compiler/: CMakeLists.txt
Compiler/Converter/: converter.cpp  converter.hpp
Compiler/Lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
Compiler/Main/: main.cpp
Compiler/Parser/: ast.cpp  ast.hpp  except.cpp  except.hpp  parser.cpp  parser.hpp
Debugger/: CMakeLists.txt
Debugger/Listener/: listener.cpp  listener.hpp
Debugger/Main/: main.cpp
MathsInterpreter/: CMakeLists.txt  lexer.hpp  main.cpp
VM/: CMakeLists.txt  benchmark.hpp
VM/Interpreter/: interpreter.cpp  interpreter.hpp
VM/Lexer/: byte_consumer.cpp  byte_consumer.hpp  byte_lexer.cpp  byte_lexer.hpp  byte_token.cpp  byte_token.hpp
VM/Main/: main.cpp
VM/Token/: token.cpp  token.hpp  value.hpp
antlr/cpp_runtime/run/usr/local/lib/: libantlr4-runtime.so.4.7.1
antlr/cpp_runtime/runtime/src/atn/: LexerATNSimulator.cpp  ParserATNSimulator.cpp  ProfilingATNSimulator.cpp
examples/: factorial.sssc  fibonacci.sssc  fizzbuzz.sssc  guess_the_number.sssc  hello_world.sssc  helloworld.ss  helloworld.sssc  out.cwsc  out.iwsc  test.ss
include/: antlr_visitor.hpp  error_listener.hpp  errors.hpp  llvm_visitor.hpp  parser_error_handler.hpp  parser_errors.hpp  pprinter.hpp  visitor.hpp
lib/antlr/: SnowStar.interp  SnowStar.tokens  SnowStarBaseVisitor.cpp  SnowStarBaseVisitor.h  SnowStarLexer.cpp  SnowStarLexer.h  SnowStarLexer.interp  SnowStarLexer.tokens  SnowStarParser.cpp  SnowStarParser.h  SnowStarParser.interp  SnowStarParser.tokens  SnowStarParserBaseVisitor.cpp  SnowStarParserBaseVisitor.h  SnowStarParserVisitor.cpp  SnowStarParserVisitor.h  SnowStarVisitor.h
src/: CMakeLists.txt  antlr_visitor.cpp  errors.cpp  llvm_visitor.cpp  main.cpp  parser_error_handler.cpp  parser_errors.cpp  pprinter.cpp  visitor.cpp  visitor.hpp
src/.antlr/: SnowStar.interp  SnowStar.tokens  SnowStarBaseVisitor.h  SnowStarLexer.cpp  SnowStarLexer.h  SnowStarLexer.interp  SnowStarParser.cpp  SnowStarParser.h  SnowStarVisitor.cpp  SnowStarVisitor.h
test/: helloworld.ss  test2.ss
